--- a/starbuzz-master/starbuzz.css
+++ b/starbuzz-master/starbuzz.css
@@ -60,23 +60,12 @@ a:visited {
   text-decoration:  none;
   border-bottom:    thin dotted #675c47;
 }
-.not feTurbulence{
 
+#allcontent{
+  width: 800px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   background-color: #675c47;
-  color:            #efe5d0;
-  text-align:       center;
-  padding:          15px;
-  margin:           10px;
-  font-size:        90%;
-  clear: right;  background-color: #675c47;
-  color:            #efe5d0;
-  text-align:       center;
-  padding:          15px;
-  margin:           10px;
-  font-size:        90%;
-  clear: right;
+  margin-left: auto;
+  margin-right:auto;
 }
-
-
-
-
